# internal/routers/router.go
@@ -27,7 +27,7 @@ func NewRouter() *gin.Engine {
 		apiv1.POST("/tags", tag.Create)
 		apiv1.DELETE("/tags/:id", tag.Delete)
 		apiv1.PUT("/tags/:id", tag.Update)
-		apiv1.PATCH("/tags/:id/state", tag.Update)
+		apiv1.PATCH("/tags/state/:id", tag.ChangeState)
 		apiv1.GET("/tags", tag.List)
 		apiv1.GET("/tags/:id", tag.Get)
 
